WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301710
Temporal: Adding large microseconds or nanoseconds values can yield wrong results
https://bugs.webkit.org/show_bug.cgi?id=301710
Summary
Temporal: Adding large microseconds or nanoseconds values can yield wrong res...
Tim Chevalier
Reported
2025-10-30 13:04:07 PDT
``` const pdt = Temporal.PlainDateTime.from("2020-02-29T00:57:27.747612578"); pdt.add(Temporal.Duration.from({microseconds: Number.MAX_SAFE_INTEGER}).toString() ``` Should be: ``` "2305-08-04T00:45:02.488603578" ``` Actual result in JSC: ``` "2305-08-04T00:45:02.488604578" ```
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Chevalier
Comment 1
2025-10-30 13:09:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53211
EWS
Comment 2
2025-11-03 18:07:17 PST
Committed
302509@main
(ce3c6e45d71d): <
https://commits.webkit.org/302509@main
> Reviewed commits have been landed. Closing PR #53211 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-03 18:08:12 PST
<
rdar://problem/163977265
>
WebKit Commit Bot
Comment 4
2025-11-03 19:40:24 PST
Re-opened since this is blocked by
bug 301904
Tim Chevalier
Comment 5
2025-11-04 12:00:54 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53413
EWS
Comment 6
2025-11-04 20:50:13 PST
Committed
302573@main
(db7f4c5396b8): <
https://commits.webkit.org/302573@main
> Reviewed commits have been landed. Closing PR #53413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug