Source/JavaScriptCore/runtime/TemporalCalendar.cpp
@@ -265,7 +265,9 @@ ISO8601::PlainDate TemporalCalendar::balanceISODate(JSGlobalObject* globalObject
         return ISO8601::PlainDate { ISO8601::outOfRangeYear, 1, 1 };
     }
     auto [ y, m, d ] = globalObject->vm().dateCache.yearMonthDayFromDaysWithCache(static_cast<int32_t>(daysToUse));
-    return ISO8601::PlainDate { y, (unsigned) m + 1, (unsigned) d };
+    if (!ISO8601::isYearWithinLimits(y)) [[unlikely]]
+        return ISO8601::PlainDate { ISO8601::outOfRangeYear, static_cast<unsigned>(m + 1), static_cast<unsigned>(d) };
+    return ISO8601::PlainDate { y, static_cast<unsigned>(m + 1), static_cast<unsigned>(d) };
 }
 
 // https://tc39.es/proposal-temporal/#sec-temporal-adddurationtodate
