Source/JavaScriptCore/runtime/TemporalObject.h
@@ -142,7 +142,6 @@ enum class AddOrSubtract : bool {
     Subtract
 };
 
-double nonNegativeModulo(double x, double y);
 WTF::String ellipsizeAt(unsigned maxLength, const WTF::String&);
 PropertyName temporalUnitPluralPropertyName(VM&, TemporalUnit);
 PropertyName temporalUnitSingularPropertyName(VM&, TemporalUnit);
